--- a/man/man1/wordlint.1
+++ b/man/man1/wordlint.1
@@ -13,7 +13,11 @@ Text may be linted by distance between words (that is, by word count),
 by line count, or by percentage of the total words in the file.
 The user may also choose a minimum word length for matches.
 .PP
-Options exist for data output, which is machine\-readable by default.
+Filters are available to remove punctuation, capitalization, and/or a
+user\-defined list of words from the list of potential matches.
+.PP
+Various modes exist for data output, which is machine\-readable by
+default.
 Results may be sorted by alphabetically by word, by position (line
 number), or by intervening distance between matches; and may be used
 with a human\-readable mode.
@@ -25,14 +29,14 @@ Display condensed help and exit.
 .RS
 .RE
 .TP
-.B \-f \f[I]FILE\f[]
+.B \-f, \-\-file \f[I]FILE\f[]
 Specify an input file.
 If none is given, wordlint reads from stdin.
 .RS
 .RE
 .SS Linting Options
 .TP
-.B \-d \f[I]INT | FLOAT\f[]
+.B \-d, \-\-distance \f[I]INT | FLOAT\f[]
 Specify maximum intervening distance between returned word\-pairs.
 \f[B]If the type of lint is either "word" or "line", an integer must be
 used\f[], while a "percentage" check will accept a float value.
@@ -41,7 +45,7 @@ Default is 250.
 .RS
 .RE
 .TP
-.B \-t \f[I]word|line|percentage\f[]
+.B \-t, \-\-type \f[I]word|line|percentage\f[]
 Specify type of lint to perform, which affects which the calculation of
 intervening distance between word pairs.
 Options are:
@@ -61,28 +65,49 @@ A percentage check sets this value according to a word\[aq]s count
 divided by the total count of words in the input.
 .RE
 .TP
-.B \-w \f[I]NUMBER\f[]
+.B \-w ,\-\-wordlength \f[I]NUMBER\f[]
 Specify minimum length of words to be matched, i.e.
 to reduce hits for "there".
 Default is 5.
 .RS
 .RE
+.SS Filters
+.TP
+.B \-b, \-\-blacklist
+Specify a file containing a newline\-separated list of words (no spaces)
+to filter from matches.
+Pairs well with \-\-nopunct, which is applied before, but activated
+prior to application of \-\-nocaps filter.
+Thus, \-\-nocaps will not interfere, for example, with proper names
+given in the blacklist.
+.RS
+.RE
+.TP
+.B \-\-nocaps
+Ignore capitalization when determining matches.
+.RS
+.RE
+.TP
+.B \-\-nopunct
+Ignore punctuation when determining matches.
+.RS
+.RE
 .SS Output Options
 .TP
-.B \-a
+.B \-a, \-\-all
 Return all matched pairs of words regardless of intervening distance.
 Deactivates \-d parameter.
 .RS
 .RE
 .TP
-.B \-h
+.B \-h, \-\-human
 Return human\-readable output.
-Compatible with all sorting except for \f[C]\-s\ vim\f[], which will
-supersede \f[C]\-h\f[].
+Compatible with all sorting except for \f[C]\-\-show\ vim\f[], which
+will supersede \f[C]\-\-human\f[].
 .RS
 .RE
 .TP
-.B \-s \f[I]word|position|distance|vim\f[]
+.B \-s, \-\-sort \f[I]word|position|distance|vim\f[]
 Sort word pairs alphabetically, by line number, or by intervening
 distance; or provides Vim plugin output respective to the following
 options:
@@ -101,12 +126,13 @@ options:
 .IP
 .nf
 \f[C]
-wordlint\ \-t\ line\ \-d\ 20\ \-w\ 7\ \-f\ file.txt
+wordlint\ \-\-type\ line\ \-\-distance\ 20\ \-\-wordlength\ 7\ \-\-file\ file.txt
 \f[]
 .fi
 .PP
 Finds matching strings consisting of seven characters or more and which
 have an intervening distance of twenty lines or less.
+Returns machine\-readable format.
 .IP
 .nf
 \f[C]
@@ -117,6 +143,17 @@ cat\ file.txt\ |\ wordlint\ \-t\ percentage\ \-d\ 2.5\ \-a\ \-s\ word\ \-h\
 Finds all matching, five\-characters\-or\-longer strings within a 2.5%
 distance of one\-another within the file, and returns the output sorted
 alphabetically and in human\-readable form.
+.IP
+.nf
+\f[C]
+wordlint\ \-f\ file.txt\ \-b\ dir/blacklist.txt\ \-\-nopunct\ \-\-nocaps
+\f[]
+.fi
+.PP
+Finds matching strings consisting of 5 characters or more, and which
+have had punctuation, a list of words, and all capitalization stripped
+from the possible matches.
+Returns machine\-readable table.
 .SH See Also
 .PP
 A Vim front\-end to Wordlint, creatively named Wordlint.vim, is
