Final documentation touch-up before .0.2.0.0

--- a/man/man1/wordlint.1
+++ b/man/man1/wordlint.1
@@ -1,4 +1,4 @@
-.TH "WORDLINT" "1" "2015\-02\-20" "0.2.0.0
+.TH "WORDLINT" "1" "2015\-02\-24" "0.2.0.0
 .SH Name
 .PP
 wordlint \- plaintext redundancy linter
@@ -181,6 +181,10 @@ Vim\[aq]s \[aq]erororformat\[aq] option).
 .SH See Also
 .PP
 A Vim front\-end to Wordlint, creatively named Wordlint.vim, is
-available at https://github.com/gbgar/Wordlint.vim
+available at <https://github.com/gbgar/Wordlint.vim>
+.PP
+A compiler and a flycheck interface are available for Emacs:
+<https://github.com/gbgar/wordlint.el> and
+<https://github.com/gbgar/flycheck-wordlint.el>.
 .SH AUTHOR
 GB Gardner.
