--- a/man/man1/wordlint.1
+++ b/man/man1/wordlint.1
@@ -72,14 +72,18 @@ Default is 5.
 .RS
 .RE
 .SS Filters
+.PP
+\-b, \-\-blacklist \f[I]FILE\f[] : Specify a file containing a
+newline\-separated list of words (no spaces) to filter against matches.
+Pairs well with \-\-nopunct, which is activated prior to application of
+\-\-nocaps filter.
+The blacklist is applied again after the \-\-nocaps filter, thus,
+\-\-nocaps will not interfere, for example, with proper names given in
+the blacklist.
 .TP
-.B \-b, \-\-blacklist \f[I]FILE\f[]
+.B \-\-whitelist \f[I]FILE\f[]
 Specify a file containing a newline\-separated list of words (no spaces)
-to filter from matches.
-Pairs well with \-\-nopunct, which is applied before, but activated
-prior to application of \-\-nocaps filter.
-Thus, \-\-nocaps will not interfere, for example, with proper names
-given in the blacklist.
+to only allow specific matches to be output.
 .RS
 .RE
 .TP
