Update copyright year, switch to GPL3 license.

--- a/man/man1/wordlint.1
+++ b/man/man1/wordlint.1
@@ -1,4 +1,4 @@
-.TH "WORDLINT" "1" "2015\-02\-24" "0.2.1.0
+.TH "WORDLINT" "1" "2016\-05\-17" "0.2.1.0
 .SH Name
 .PP
 wordlint \- plaintext redundancy linter
@@ -72,14 +72,17 @@ Default is 5.
 .RS
 .RE
 .SS Filters
-.PP
-\-b, \-\-blacklist \f[I]FILE\f[] : Specify a file containing a
-newline\-separated list of words (no spaces) to filter against matches.
+.TP
+.B \-b, \-\-blacklist \f[I]FILE\f[]
+Specify a file containing a newline\-separated list of words (no spaces)
+to filter against matches.
 Pairs well with \-\-nopunct, which is activated prior to application of
 \-\-nocaps filter.
 The blacklist is applied again after the \-\-nocaps filter, thus,
 \-\-nocaps will not interfere, for example, with proper names given in
 the blacklist.
+.RS
+.RE
 .TP
 .B \-\-whitelist \f[I]FILE\f[]
 Specify a file containing a newline\-separated list of words (no spaces)
